k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usvad-sierra
spec:
  selector:
    matchLabels:
      app: usvad-sierra
  template:
    metadata:
      labels:
        app: usvad-sierra
    spec:
      containers:
        - name: usvad-sierra
          image: mattipaksula/usvad-sierra
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 128Mi
