k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: usva-focus
spec:
  selector:
    app: usva-focus
  ports:
    - port: 80
      targetPort: 8080
