k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usvad-sierra
spec:
  ingressClassName: nginx
  rules:
    - host: sierra.usva.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usvad-sierra
                port:
                  number: 80
